cleaned up old files

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,9 @@
 
 {% include head.html %}
 
-<header class="header-test">
+<header class="header-background">
 
-  <div class="clearfix border-bottom-thick header-border">
+  <div class="clearfix header-border">
     <div class="container mx-auto">
       <ul class="list-reset mt-lg-1 mb-2 mb-lg-1 right">
         {% for my_page in site.pages %}
@@ -22,12 +22,12 @@
   </div>
 </header>
         
-<body class="header-test">
+<body class="header-background">
       <div class="container mx-auto px-2 mb-2 clearfix header-text">
         <h1 class="h0 inline-block col-10 sm-width-full py-3 mt-3 header-title">{{ site.title }}</h1>
 
         <div class="clearfix mb-4 py-1">
-          <div class="col-12 sm-width-full left border-top-thin py-3">
+          <div class="col-12 sm-width-full left border py-3">
           </div>
           <div class="col-11 prose left mb-4">
             <img src="/assets/images/profile.png" alt="Angelica Pan profile" style="float:right; width:150px; height:150px;">
