--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="border-bottom-thick px-2 clearfix">
+<header class="header-border px-2 clearfix">
     <div class="container mx-auto">
     <ul class="list-reset mt-lg-1 mb-2 mb-lg-1 right">
       {% for my_page in site.pages %}
