--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
     <h1 class="h0 py-3 mt-3">{{ page.title }}</h1>
   </header>
   <div class="clearfix mb-4 py-1">
-    <div class="col-12 sm-width-full left border-top-thin py-3">
+    <div class="col-12 sm-width-full left border py-3">
     </div>
     <div class="prose mb-4">
       {{ content }}
