--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   </header>
 
   <div class="clearfix mb-4 py-1">
-    <div class="col-12 sm-width-full left border-top-thin py-3">
+    <div class="col-12 sm-width-full left border py-3">
     </div>
     <div class="col-5 left prose">
       {{ content }}
