--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -10,7 +10,7 @@ pre {
 }
 
 code {
-    color: $color-code;
+    color: $color-text-accent;
     font-size: $body-font-size;
     padding: 1px 0px;
 }
