linked to style.css

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -23,6 +23,5 @@ $color-text-accent: $gray !default;
         "variables",
         "base",
         "components",
-        "utilities",
-        "fonts"
+        "utilities"
 ;
