--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <li class="inline-block">
-            <a class="align-middle link-primary-home mr-2 mr-lg-0 ml-lg-2" href="{{ my_page.url | prepend: site.baseurl }}">
+            <a class="align-middle link-primary-home mr-2 mr-lg-0 ml-lg-2" href="{{ site.url }}{{ my_page.url }}">
               {{ my_page.title }}
             </a>
           </li>
