--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,14 @@
 <header class="header-border px-2 clearfix">
-    <div class="container mx-auto">
+    <div class="col-12 mx-auto">
     <ul class="list-reset mt-lg-1 mb-2 mb-lg-1 right">
       {% for my_page in site.pages %}
-        {% if my_page.title %}
+        {% if my_page.related_file %}
+        <li class="inline-block">
+          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" target="_blank" rel="noopener" href="{{ site.url }}{{ my_page.related_file }}">
+            {{ my_page.title }}
+          </a>
+        </li>
+        {% else %}
         <li class="inline-block">
           <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="{{ site.url }}{{ my_page.url }}">
             {{ my_page.title }}
