--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,39 +20,27 @@
   </head>
   
 
-<header class="header-background">
-
-  <div class="clearfix header-border">
-    <div class="container mx-auto">
-      <ul class="list-reset mt-lg-1 mb-2 mb-lg-1 right">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <li class="inline-block">
-            <a class="align-middle link-primary-home mr-2 mr-lg-0 ml-lg-2" href="{{ site.url }}{{ my_page.url }}">
-              {{ my_page.title }}
-            </a>
-          </li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-</header>
+{% include header.html %}
         
 <body class="header-background">
       <div class="container mx-auto px-2 mb-2 clearfix header-text">
         <h1 class="h0 inline-block col-10 sm-width-full py-3 mt-3 header-title">{{ site.title }}</h1>
 
         <div class="clearfix mb-4 py-1">
-          <div class="col-12 sm-width-full left border py-3">
-          </div>
-          <div class="col-11 prose left mb-4">
-            <img src="/assets/images/profile.png" alt="Angelica Pan profile" style="float:right; width:150px; height:150px;">
-            <p>{{ site.description }}</p>
+          <div class="col-12 sm-width-full left border py-3"></div>
 
-            <h3>Contact me</h3>
-            <p>angelica.s.pan@gmail.com</p>
+          <div class="col-12 centering-container">
+            <div class="col-11 prose">
+              <p><img src="/assets/images/profile.png" alt="Angelica Pan profile" style="float:right; width:150px; height:150px;">
+                {{ site.description}}
+              </p>
+          
+              <h3>Contact me</h3>
+
+              <p><a href = "mailto: angelica.s.pan@gmail.com">angelica.s.pan@gmail.com</a></p>
+            </div>
           </div>
+
         </div>
       </div>
 </body>
