--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -189,13 +189,6 @@ h1 {
   text-align: center;
 }
 
-.project-blurb {    
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  // outline: 2px dashed blue;
-}
-
 .project-button{
   background-color: $color-accent; //yellow
   border: none;
@@ -208,6 +201,7 @@ h1 {
   text-align: center;
   text-decoration: none;
   font-weight: bold;
+  font-size: $prose-font-size;
   margin: 0 auto;
 
   &:hover {
@@ -217,7 +211,35 @@ h1 {
 
 }
 
-.wrapper {
+// div container to vertically and horizontally center
+.centering-container{
   display: flex;
   justify-content: center;
+  align-items: center;
+  //border: 1px dashed grey;
+}
+
+// iframe container for pdfs
+.pdf-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 100%;
+}
+
+// iframe conftainer for html
+.html-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 100%;
+  border: 1px dashed grey;
+}
+
+// iframe class
+.preview {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
