changed mobile navigation size

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,9 +13,7 @@ layout: default
 
         <i><a href='/portfolio'>Back</a></i>
 
-        <br>
-        
-        <div class="centering-container prose">
+        <div class="mt-2 centering-container prose">
           <a target="_blank" href="{{ page.related_file}}" class = "project-button">
             Click to open file in a new tab
           </a>
