--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,13 @@
       {% for my_page in site.pages %}
         {% if my_page.related_file %}
         <li class="inline-block">
-          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" target="_blank" rel="noopener" href="{{ site.url }}{{ my_page.related_file }}">
+          <a class="align-middle nav-size link-primary mr-2 mr-lg-0 ml-lg-2" target="_blank" rel="noopener" href="{{ site.url }}{{ my_page.related_file }}">
             {{ my_page.title }}
           </a>
         </li>
         {% else %}
         <li class="inline-block">
-          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="{{ site.url }}{{ my_page.url }}">
+          <a class="align-middle nav-size link-primary mr-2 mr-lg-0 ml-lg-2" href="{{ site.url }}{{ my_page.url }}">
             {{ my_page.title }}
           </a>
         </li>
