reduced width of pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,10 +8,12 @@ layout: default
   </header>
 
   <div class="clearfix mb-4 py-1">
-    <div class="col-12 sm-width-full left border py-3 prose">
-        {{ content }}
+    <div class="col-12 sm-width-full left border py-3"></div>
+      <div class="col-12 centering-container">
+        <div class="col-11 prose">
+          {{ content}}
 
-        <i><a href='/portfolio'>Back</a></i>
+          <i><a href='/portfolio'>Back</a></i>
 
         <div class="mt-2 centering-container prose">
           <a target="_blank" href="{{ page.related_file}}" class = "project-button">
@@ -34,8 +36,7 @@ layout: default
             </p>  
           </iframe>
         </div>
-
-    </div>
+      </div>
   </div>
 </article>
 
