--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,19 +2,21 @@
 layout: default
 ---
 
+<div class="container">
+  <!-- begin page -->
+  <article class="page">
 
-
-<article class="container mx-auto px-2 mt-2 mb-4">
-  <header>
-    <h1 class="h0 py-3 mt-3">{{ page.title }}</h1>
-  </header>
-  <div class="clearfix mb-4 py-1">
-    <div class="col-12 sm-width-full left border py-3">
+    <div class="page__head">
+      <h1 class="page__title">{{ page.title | escape }}</h1>
+      {% if page.image %}
+      <div class="page-image" style="background-image: url({{site.baseurl}}{{page.image}})"></div>
+      {% endif %}
     </div>
-    <div class="prose mb-4">
-      {{ content }}
-    </div>
-  </div>
- 
 
-</article>
+    <div class="page__content">
+    {{ content }}
+    </div>
+
+  </article>
+  <!-- end page -->
+</div>
