--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -13,9 +13,9 @@
 }
 
 .post__title {
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
   font-size: 50px;
-  line-height: 55px;
+  // line-height: 55px;
 }
 
 .post__date {
