--- a/_sass/4-layouts/_portfolio.scss
+++ b/_sass/4-layouts/_portfolio.scss
@@ -6,6 +6,11 @@
   margin-bottom: $sp-8;
 }
 
+.portfolio-title{
+  margin-top: $sp-1;
+  margin-bottom: 0px;
+}
+
 .portfolio-thumbnail{
   height: 150px;
   width: 150px;
