--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -13,13 +13,16 @@
 }
 
 .post__title {
-  // margin-bottom: 10px;
+  margin-bottom: $sp-2;
   font-size: 50px;
-  // line-height: 55px;
+  font-weight: bold;
+  line-height: 55px;
 }
 
 .post__date {
-  margin-bottom: 30px;
+  margin-top: $sp-1;
+  margin-bottom: $sp-1;
+  // margin-bottom: 30px;
   font-family: 'IBM Plex Mono', monospace;
   font-size: 12px;
   text-transform: uppercase;
