--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,54 +2,22 @@
 layout: default
 ---
 
-{% if page.parent %}
-  {% for item in site.pages %}
-    {% if item.title == "Portfolio" %}
-      {% assign parent_url = item.url %}
-    {% endif %}
-  {% endfor %}
-  <nav class="breadcrumb-nav">
-    <div class="breadcrumb-nav-item"><a href="{{ parent_url }}">{{ page.parent }}</a></div>
-    <div class="breadcrumb-nav-item"> / </div>
-    <div class="breadcrumb-nav-item"><span>{{ page.title }}</span></div>
-  </nav>
-{% endif %}
-
 <div class="container">
   <!-- begin post -->
   <article class="post">
     <div class="post__head" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
-      <h1 class="post__title">{{ page.title }}</h1>
-      <h5 class="post__date" style="margin-bottom: 20px"><i>{{ page.date | date: "%B %Y" }}</i></h5>
-      {% if page.thumbnail %}
-        <div class="portfolio-thumbnail" style="margin: auto">
-          <img src="{{ page.thumbnail | prepend: site.baseurl }}" alt="{{ page.title }}" class="portfolio-border">
-        </div>
+      <h1 class="post__title">{{ page.title | escape }}</h1>
+      <div class="post__date">
+        <time datetime="{{ page.date | date_to_xmlschema }}">Published {{page.date | date: '%b %d, %Y'}}</time>
+      </div>
+      {% if page.image %}
+      <div class="post-image img-blur" style="background-image: url({{site.baseurl}}{{page.image}})"></div>
       {% endif %}
     </div>
 
     <div class="post__content" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-delay="100" data-aos-duration="700">
       {{ content }}
     </div>
-
-    {% if page.related_file %}
-    <div class="portfolio-preview-container" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
-      <div class="author__more"><a href="{{ page.related_file | prepend: site.baseurl }}" class="say-hello" target="_blank">Click to open in a new tab</a></div> 
-      <iframe class="portfolio-preview" src="{{ page.related_file }}"  {% if page.related_html %}style="border: 1px dashed grey;"{% endif%}>
-        <a href="{{ page.related_file }}">
-        Fallback link for browsers that don't support iframes
-        </a>
-      </iframe>
-    </div>
-    {% endif %}
-
-    {% if page.related_link %}
-    <div class="portfolio-preview-container" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
-      <div class="author__more">
-        <a href="{{ page.related_link }}" class="say-hello" target="_blank">Click to open link in a new tab</a>
-      </div> 
-    </div>
-    {% endif %}
 
     {% if page.tags.size >= 1 %}
     <div class="post-tags">
@@ -67,7 +35,7 @@ layout: default
         </div>
         <span class="post__nav-wrapper">
           <div class="post__nav-image" style="background-image: url({{site.baseurl}}{{page.previous.image}})"></div>
-          <h2 class="post__nav-title"><time style="color: white;">previous</time> <br>{{page.previous.title}}</h2>
+          <h2 class="post__nav-title"><time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date: '%b %d, %Y'}}</time> <br>{{page.previous.title}}</h2>
         </span>
       </a>
       {% endif %}
@@ -79,7 +47,7 @@ layout: default
         </div>
         <span class="post__nav-wrapper">
           <div class="post__nav-image" style="background-image: url({{site.baseurl}}{{page.next.image}})"></div>
-          <h2 class="post__nav-title"><time style="color: white;">next</time> <br>{{page.next.title}}</h2>
+          <h2 class="post__nav-title"><time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date: '%b %d, %Y'}}</time> <br>{{page.next.title}}</h2>
         </span>
       </a>
       {% endif %}
