--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -1,8 +1,6 @@
 // *****************
 // Color Variables
 // *****************
-
-
 $primary-color: #6b69fa;
 $secondary-color: #ffd001;
 $dark: #333;
@@ -13,74 +11,9 @@ $gray-white: #f8f8f8;
 $gray-lighten: #c7d0e2;
 $white: #fff;
 
-// colors from the "just the docs" themes
-$grey-dk-000: #959396;
-$grey-dk-100: #5c5962;
-$grey-dk-200: #44434d;
-$grey-dk-250: #302d36;
-$grey-dk-300: #27262b;
-
-$grey-lt-000: #f5f6fa;
-$grey-lt-100: #eeebee;
-$grey-lt-200: #ecebed;
-$grey-lt-300: #e6e1e8;
-
-$purple-000: #7253ed;
-$purple-100: #5e41d0;
-$purple-200: #4e26af;
-$purple-300: #381885;
-
-$blue-000: #2c84fa;
-$blue-100: #2869e6;
-$blue-200: #264caf;
-$blue-300: #183385;
-
-$green-000: #41d693;
-$green-100: #11b584;
-$green-200: #009c7b;
-$green-300: #026e57;
-
-$yellow-000: #ffeb82;
-$yellow-100: #fadf50;
-$yellow-200: #f7d12e;
-$yellow-300: #e7af06;
-
-$red-000: #f77e7e;
-$red-100: #f96e65;
-$red-200: #e94c4c;
-$red-300: #dd2e2e;
-
-// spacing from the "just the docs" theme
-$spacing-unit: 1rem; // 1rem == 16px
-
-$spacers: (
-  sp-0: 0,
-  sp-1: $spacing-unit * 0.25,
-  sp-2: $spacing-unit * 0.5,
-  sp-3: $spacing-unit * 0.75,
-  sp-4: $spacing-unit,
-  sp-5: $spacing-unit * 1.5,
-  sp-6: $spacing-unit * 2,
-  sp-7: $spacing-unit * 2.5,
-  sp-8: $spacing-unit * 3,
-  sp-9: $spacing-unit * 3.5,
-  sp-10: $spacing-unit * 4,
-) !default;
-
-$sp-1: map-get($spacers, sp-1) !default; // 0.25 rem == 4px
-$sp-2: map-get($spacers, sp-2) !default; // 0.5  rem == 8px
-$sp-3: map-get($spacers, sp-3) !default; // 0.75 rem == 12px
-$sp-4: map-get($spacers, sp-4) !default; // 1    rem == 16px
-$sp-5: map-get($spacers, sp-5) !default; // 1.5  rem == 24px
-$sp-6: map-get($spacers, sp-6) !default; // 2    rem == 32px
-$sp-7: map-get($spacers, sp-7) !default; // 2.5  rem == 40px
-$sp-8: map-get($spacers, sp-8) !default; // 3    rem == 48px
-$sp-9: map-get($spacers, sp-9) !default; // 3.5  rem == 56px
-$sp-10: map-get($spacers, sp-10) !default; // 4  rem == 64px
-
-// change font
+// Change default theme font
 @import "fonts";
 $body-font-family: "Computer Modern";
 $body-font-size: 24px;
 $prose-font-size: 18px;
-$body-color: $grey-dk-300;
+$body-color: #27262b;
