--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -5,9 +5,9 @@
 body {
   // font-family: 'Lora', Georgia, Times, 'Times New Roman', serif;
   // font-size: 16px;
+  // color: $dark;
   font-family: $body-font-family;
   font-size: $body-font-size;
-  line-height: 1.5;
   color: $body-color;
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
@@ -39,10 +39,9 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: $sp-4;
-  margin-bottom: $sp-2;
-  font-family: $body-font-family;
+  margin: 45px 0 30px;
   // font-family: 'Lora', Georgia, Times, 'Times New Roman', serif;
+  font-family: $body-font-family;
   line-height: initial;
   font-weight: 400;
   letter-spacing: 0.1px;
@@ -74,8 +73,7 @@ h6 {
 
 blockquote {
   padding-left: 30px;
-  // font-family: 'Lora', Georgia, Times, serif;
-  font-family: $body-font-family;
+  font-family: 'Lora', Georgia, Times, serif;
   font-weight: 400;
   font-style: italic;
   font-size: 18px;
