--- a/_sass/3-modules/_author-section.scss
+++ b/_sass/3-modules/_author-section.scss
@@ -1,7 +1,7 @@
 /* Author */
 .author {
-  margin-top: $sp-8;
-  padding-bottom: 70px;
+  margin-top: 80px;
+  // padding-bottom: 15px;
   // border-bottom: 1px solid $gray-lighten;
   @media (max-width: $mobile) {
     margin: 50px 0;
@@ -13,39 +13,51 @@
   display: block;
   max-width: 130px;
   max-height: 130px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 20px;
+  border-radius: 50%;
+  background-color: $gray-white;
+  transition: opacity 100ms ease;
+  &:hover {
+    .avatar {
+      opacity: 0.9;
+    }
+  }
+}
+
+.author__job {
+  margin-bottom: 15px;
+  font-size: 14px;
+  font-style: italic;
+  text-align: center;
+  color: $gray;
 }
 
 .author__name {
-  margin-top: $sp-6;
-  margin-bottom: $sp-3;
+  margin-top: 5px;
+  margin-bottom: 15px;
   font-size: 36px;
-  font-weight: bold;
   text-align: center;
+  font-weight: bold;
 }
 
 .author__bio {
-  // max-width: 1000px;
-  // margin-left: auto;
-  // margin-right: auto;
-  // border: 1px solid blue;
-  margin-bottom: $sp-6;
-  font-size: 18px;
-  line-height: 1.5;
+  max-width: 450px;
+  margin: 0 auto 30px;
+  font-size: 16px;
+  line-height: 27px;
   text-align: center;
-  color: $grey-dk-200;
+  color: $gray;
 }
 
 .author__more {
   text-align: center;
 }
 
-a.say-hello {
+a.see-more {
   display: inline-block;
   padding: 15px 30px;
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 13px;
+  font-weight: 700;
   text-align: center;
   border-radius: 40px;
   color: #fff;
@@ -59,8 +71,8 @@ a.say-hello {
 
 a.know-more {
   margin-left: 25px;
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 13px;
+  font-weight: 700;
   color: $gray;
   text-decoration: underline;
   &:hover {
