--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -1,7 +1,8 @@
 /* Footer */
 .footer {
-  margin-top: 80px;
-  padding: 60px 0;
+  // margin-top: 80px;
+  margin-top: 40px;
+  padding: 40px 0;
   border-top: 1px solid $gray-lighten;
   @media (max-width: $mobile) {
     margin-top: 50px;
@@ -14,7 +15,7 @@
 }
 
 .contact__title {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   font-size: 15px;
   font-family: 'IBM Plex Mono', monospace;
   line-height: 25px;
@@ -28,12 +29,33 @@
 .contact__item {
   display: inline-block;
   margin-right: 15px;
+  padding: 10px 10px;
+  border-radius: 40px;
+  transition: all 150ms ease-in-out;
+  &:hover {
+    transform: translate(0px, -5px);
+    box-shadow: 0 10px 20px -4px rgba(30,28,122,0.3);
+  }
   &:last-child {
     margin-right: 0;
   }
 }
 
+// .contact__item {
+//   display: inline-block;
+//   padding: 10px 10px;
+//   text-align: center;
+//   border-radius: 40px;
+//   transition: all 150ms ease-in-out;
+//   &:hover {
+//     transform: translate(0px, -5px);
+//     box-shadow: 0 10px 20px -4px rgba(30,28,122,0.3);
+//   }
+// }
+
 .contact__link {
   font-size: 16px;
   color: $dark;
 }
+
+
