--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -4,11 +4,10 @@
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  // justify-content: space-between;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 30px 0;
-  border-bottom: 1px solid $grey-dk-000;
+  // border-bottom: 1px solid $gray-lighten;
 }
 
 .logo__link {
@@ -18,7 +17,7 @@
 }
 
 .logo__image {
-  max-height: 50px;
+  max-height: 35px;
 }
 
 .nav__item {
@@ -26,9 +25,10 @@
   margin-left: 30px;
   .nav__link {
     color: $dark;
-    
+
     &.active{
       color: $primary-color;
+      font-weight: bold;
     }
   }
 }
