--- a/_sass/4-layouts/_page.scss
+++ b/_sass/4-layouts/_page.scss
@@ -17,6 +17,8 @@
   font-size: 50px;
   line-height: 55px;
   font-weight: bold;
+  padding-bottom: 20px;
+  border-bottom: 1px solid $gray-lighten;
 }
 
 .page-image {
@@ -33,11 +35,12 @@
 }
 
 .page__content {
+  margin-top: 20px;
   margin-bottom: 45px;
   p {
     font-size: 18px;
-    line-height: 1.75;
-    color: $body-color;
+    line-height: 32px;
+    color: $gray;
     img {
       margin: 30px 0;
     }
